mise a modification infos  vente client